--- a/app/styl.css
+++ b/app/styl.css
@@ -1,11 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-
 #scene{
-   background: linear-gradient(45deg, #5B3C88, #ff7e5f, #feb47b, #86a8e7, #3A5FCD, #5B3C88);
+   background: linear-gradient(45deg, #5B3C88, #3A5FCD , #feb47b, #86a8e7, #3A5FCD, #5B3C88);
    animation: gradientAnimation 15s ease infinite;   
 } 
 
@@ -19,4 +13,7 @@
   100% {
     background-position: 0% 50%;
   }
+}
+.bg-primary{
+   background-color: #5B3C88 !important;
 }
