--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,19 @@ h1,h2,h3,h4,h5,h6{
   font-weight:bold;
   font-style: normal;
 }
+h1,
+
+h3,
+h4,
+h5,
+h6 {
+  font-size: ;
+  font-weight: ;
+}
+h2{
+ font-size: 3rem;
+}
+
 h1{
   font-size: 4rem !important;
 }
@@ -112,4 +125,66 @@ p{
 .dark\:text-primary:is(.dark *){
   color: #3A5FCD !important;
   
+}
+
+.btn-outline{
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
+  border-radius: 30px;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(237 240 230 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: #3A5FCD;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  font-family: 'Inter', sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: -0.3px;
+  --tw-text-opacity: 1;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
+.btn-outline::before{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: -10;
+  height: 100%;
+  width: 100%;
+  transform-origin: right;
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  border-radius: 30px;
+  --tw-bg-opacity: 1;
+  background-color: #3A5FCD;
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+  --tw-content: "";
+  content: var(--tw-content);
+}
+.btn-outline:is(.dark *){
+  --tw-border-opacity: 1;
+  border-color: rgb(49 51 48 / var(--tw-border-opacity));
+  background-color: transparent;
+  --tw-text-opacity: 1;
+  color: white;
+}
+.btn-outline:is(.dark *)::before{
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: #3A5FCD;
+}
+
+
+h3{
+  font-size: 1.8rem;
 }
