--- a/app/styl.css
+++ b/app/styl.css
@@ -245,7 +245,7 @@ h3{
   align-items: center;
   border-radius: 0px;
   --tw-bg-opacity: 1;
-  background:#5B3C88 !important ;
+  background:white !important ;
   padding: 0.625rem;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
