--- a/app/styl.css
+++ b/app/styl.css
@@ -91,6 +91,54 @@ p{
   font-style: normal;
 }
 
+.btn::before{
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: -10;
+  height: 100%;
+  width: 100%;
+  transform-origin: right;
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  border-radius: 30px;
+  --tw-bg-opacity: 1;
+  background-color: #3A5FCD !important;
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+  --tw-content: "";
+  content: var(--tw-content);
+}
+.btn{
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  border-radius: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  font-family: 'Inter', sans-serif;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: -0.3px;
+  --tw-text-opacity: 1;
+  color: white !important;
+}
+.btn::after{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: -20;
+  height: 100%;
+  width: 100%;
+  border-radius: 30px;
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: #3A5FCD !important;
+}
 .btn:is(.dark *){
   --tw-text-opacity: 1;
   color: white !important;
