--- a/app/styl.css
+++ b/app/styl.css
@@ -1,15 +1,12 @@
-#scene{
-
-
-   background: white;
- 
-}  
+#scene {
+  background: white;
+}
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 .montserrat-uniquifier {
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
   font-style: normal;
+  font-weight: weight;
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
 }
 @keyframes gradientAnimation {
   0% {
@@ -21,32 +18,34 @@
   100% {
     background-position: 0% 50%;
   }
-  
 }
 
-p{
+p {
   color: black !important;
-
 }
 
-h1,h2,h3,h4,h5,h6{
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight:bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black !important;
   font-style: normal;
-  color: black !important;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
 }
 h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6{
-  font-family: "Montserrat", sans-serif;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Montserrat', sans-serif;
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
 }
-
 
 h1,
 
@@ -57,302 +56,319 @@ h6 {
   font-size: ;
   font-weight: ;
 } */
-h2{
- font-size: 3rem;
+h2 {
+  font-size: 3rem;
 }
 
-h1{
-  font-size: 6rem  ;
+h1 {
+  font-size: 6rem;
 }
 
-@media (max-width: 768px){
-  h1{
-    font-size: 4rem;
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 3.8rem;
   }
- .globe{
-height: 162%; 
-width: 162%;
-
-
-} 
+  .globe {
+    width: 162%;
+    height: 162%;
+  }
 }
-.globe{
-height:562%; 
-width: 362%;
-margin-left:-16rem;
-
+.globe {
+  margin-left: -16rem;
+  width: 362%;
+  height: 562%;
 }
 
-
-p{
-   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  
+p {
   font-style: normal;
+  font-family: 'Montserrat', sans-serif;
+  font-optical-sizing: auto;
 }
 
-.btn::before{
+.btn::before {
   position: absolute;
   bottom: 0px;
   left: 0px;
-  z-index: -10;
-  height: 100%;
-  width: 100%;
   transform-origin: right;
+  z-index: -10;
+  width: 100%;
+  height: 100%;
   --tw-scale-x: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x))
+    skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 30px;
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD !important;
+  transition-duration: 500ms;
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
-  --tw-content: "";
+  background-color: #3a5fcd !important;
+  --tw-content: '';
   content: var(--tw-content);
 }
-.btn{
+.btn {
   position: relative;
   z-index: 0;
-  overflow: hidden;
   border-radius: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
   padding-top: 13px;
+  padding-right: 30px;
   padding-bottom: 13px;
-  font-family: 'Inter', sans-serif;
-  font-size: 1rem;
+  padding-left: 30px;
+  overflow: hidden;
   font-weight: 500;
+  font-size: 1rem;
   line-height: 1.5rem;
+  font-family: 'Inter', sans-serif;
   letter-spacing: -0.3px;
   --tw-text-opacity: 1;
   color: white !important;
 }
-.btn::after{
+.btn::after {
   position: absolute;
-  left: 0px;
   top: 0px;
+  left: 0px;
   z-index: -20;
-  height: 100%;
-  width: 100%;
   border-radius: 30px;
+  width: 100%;
+  height: 100%;
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD !important;
+  background-color: #3a5fcd !important;
 }
-.btn:is(.dark *){
+.btn:is(.dark *) {
   --tw-text-opacity: 1;
   color: white !important;
 }
-.btn:is(.dark *)::before{
+.btn:is(.dark *)::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: #5B3C88 !important;
+  background-color: #5b3c88 !important;
 }
-.btn:is(.dark *)::after{
+.btn:is(.dark *)::after {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD !important;
+  background-color: #3a5fcd !important;
 }
-.btn:hover:is(.dark *){
+.btn:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: white !important;
-
 }
-.btn-navbar:is(.dark *){
+.btn-navbar:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.btn-navbar:is(.dark *)::after{
+.btn-navbar:is(.dark *)::after {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD;
+  background-color: #3a5fcd;
 }
 
-.bg-primary{
+.bg-primary {
   --tw-bg-opacity: 1;
   background-color: #5a3acd !important;
 }
-.bg-primary-100{
+.bg-primary-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 248 232 / var(--tw-bg-opacity)) !important;
 }
-.bg-primary-200\/20{
-  background-color: rgba(148, 65, 242, 0.2) !important; 
+.bg-primary-200\/20 {
+  background-color: rgba(148, 65, 242, 0.2) !important;
 }
-.bg-primary-200\/25{
+.bg-primary-200\/25 {
   background-color: rgba(127, 65, 242, 0.25) !important;
 }
-.bg-primary-200\/30{
+.bg-primary-200\/30 {
   background-color: rgba(133, 65, 242, 0.3) !important ;
 }
-.bg-primary-200\/50{
+.bg-primary-200\/50 {
   background-color: rgba(192, 65, 242, 0.5) !important;
 }
 
-
-
-.dark\:stroke-primary:is(.dark *){
-  stroke: #3A5FCD !important;
+.dark\:stroke-primary:is(.dark *) {
+  stroke: #3a5fcd !important;
 }
 
-.dark\:fill-primary:is(.dark *){
-  fill: #3A5FCD !important;
+.dark\:fill-primary:is(.dark *) {
+  fill: #3a5fcd !important;
 }
 
-.text-primary{
+.text-primary {
   --tw-text-opacity: 1;
-  color: #3A5FCD !important;
+  color: #3a5fcd !important;
 }
 
-.dark\:text-primary:is(.dark *){
-  color: #3A5FCD !important;
-  
+.dark\:text-primary:is(.dark *) {
+  color: #3a5fcd !important;
 }
 
-.btn-outline{
+.btn-outline {
   position: relative;
   z-index: 10;
-  overflow: hidden;
-  border-radius: 30px;
   border-width: 1px;
+  border-radius: 30px;
+  overflow: hidden;
   --tw-border-opacity: 1;
   border-color: rgb(237 240 230 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD !important;
-  padding-left: 30px;
-  padding-right: 30px;
+  background-color: #3a5fcd !important;
   padding-top: 13px;
+  padding-right: 30px;
   padding-bottom: 13px;
-  font-family: 'Inter', sans-serif;
-  font-size: 1rem;
+  padding-left: 30px;
   font-weight: 500;
+  font-size: 1rem;
   line-height: 1.5rem;
+  font-family: 'Inter', sans-serif;
   letter-spacing: -0.3px;
   --tw-text-opacity: 1;
-  color: rgb(24 24 27 / var(--tw-text-opacity));
+  transition-duration: 500ms;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
+  color: rgb(24 24 27 / var(--tw-text-opacity));
 }
-.btn-outline::before{
+.btn-outline::before {
   position: absolute;
   bottom: 0px;
   left: 0px;
-  z-index: -10;
-  height: 100%;
-  width: 100%;
   transform-origin: right;
+  z-index: -10;
+  width: 100%;
+  height: 100%;
   --tw-scale-x: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x))
+    skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 30px;
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD !important;
+  transition-duration: 500ms;
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
-  --tw-content: "";
+  background-color: #3a5fcd !important;
+  --tw-content: '';
   content: var(--tw-content);
 }
-.btn-outline:is(.dark *){
+.btn-outline:is(.dark *) {
   --tw-border-opacity: 1;
-  border-color: rgb(49 51 48 / var(--tw-border-opacity) ) !important;
+  border-color: rgb(49 51 48 / var(--tw-border-opacity)) !important;
   background-color: transparent;
   --tw-text-opacity: 1;
   color: white;
 }
-.btn-outline:is(.dark *)::before{
+.btn-outline:is(.dark *)::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
-  background-color: #3A5FCD !important;
+  background-color: #3a5fcd !important;
 }
 
-
-h3{
+h3 {
   font-size: 1.8rem;
 }
 
-.skew{
+.skew {
   transform: skewY(3deg);
-
 }
 
-.skwrewvers{
+.skwrewvers {
   transform: skewY(-3deg);
 }
-.skwrewvers2{
+.skwrewvers2 {
   transform: skewY(20deg);
   margin-top: 12rem;
 }
 
-.skew2{
-  transform-origin: bottom left;
+.skew2 {
   transform: skewY(-20deg);
+  transform-origin: bottom left;
 }
-#canvas{
+#canvas {
   margin-top: 19rem;
 }
-.mobile-menu{
-  position: fixed;
-  right: 0px;
-  top: 0px;
-  z-index: 111111;
-  margin-left: auto;
-  margin-right: auto;
+.mobile-menu {
   display: flex;
-  height: 100vh;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  z-index: 111111;
+  margin-right: auto;
+  margin-left: auto;
   width: 100%;
+  height: 100vh;
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   align-items: center;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x))
+    skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   border-radius: 0px;
   --tw-bg-opacity: 1;
-  background:white !important ;
+  background: white !important ;
   padding: 0.625rem;
-  padding-left: 2.5rem;
   padding-right: 2.5rem;
+  padding-left: 2.5rem;
   --tw-shadow: 0px 0px 30px rgba(0, 0, 0, 0.05);
   --tw-shadow-colored: 0px 0px 30px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   --tw-backdrop-blur: blur(8px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast)
+    var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity)
+    var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast)
+    var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity)
+    var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
   transition-duration: 500ms;
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    opacity,
+    box-shadow,
+    transform,
+    filter,
+    -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow,
+    transform, filter, backdrop-filter;
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    opacity,
+    box-shadow,
+    transform,
+    filter,
+    backdrop-filter,
+    -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-
-.text-base{
+.text-base {
   font-size: 0.8rem;
   line-height: 1.5rem;
 }
-.bg-Purple{
-  background-color:#7f18c4;
+.bg-Purple {
+  background-color: #7f18c4;
 }
-.white{
-color: beige !important;
-
+.white {
+  color: beige !important;
 }
-.italic{
+.italic {
   font-style: normal;
 }
-.text-Purple{
+.text-Purple {
   color: #5a3acd !important;
 }
 
- .transparent-input {
-            background: rgb(0, 0, 0);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            color: white;
-        }
-        .transparent-input::placeholder {
-            color: rgba(255, 255, 255, 0.5);
-        }
-                .transparent-button {
-                  background: rgba(0, 0, 0, 0);
-                  border: 2px solid rgb(255, 255, 255);
-                  color: white;
-                }
+.transparent-input {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgb(0, 0, 0);
+  color: white;
+}
+.transparent-input::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+}
+.transparent-button {
+  border: 2px solid rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0);
+  color: white;
+}
